apps/kiali-operator/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: kiali-operator
  labels:
    app: kiali
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - "kiali.diegoluisi.eti.br"
  http:
  - headers:
      request:
        set:
          X-Forwarded-Port: "443"
    route:
    - destination:
        host: kiali.kiali-operator.svc.lgsk8sp1.grupologos.local
        port:
          number: 20001
